@@ -1,3 +1,9 @@
+2001-08-22  Michael Yount <csf@moscow.com>
+
+	* lib/Majordomo.pm:  (substitute_vars)  Bugfix:  use the
+	correct pattern match variable in error messages if a
+	loop or missing file is encountered.
+
 2001-08-21  Michael Yount <csf@moscow.com>
 
 	* lib/Majordomo.pm:  (_unregister)  Bugfix:  treat "regex"
